# NGC7023

./: .gitignore  CLAUDE.md  LICENSE  README.md  api.py  main.py  ngc7023.spec  pyproject.toml  single_instance.py  test_single_instance.py
docs/: RELEASE_NOTES_v0.1.0.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/branding/: README.md
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AboutModal.tsx  Galaxy.tsx  HelpModal.tsx  MenuBar.tsx  Modal.tsx  SettingsModal.tsx  TitleBar.tsx  Typed.tsx
frontend/src/features/terminal/: Terminal.tsx
frontend/src/lib/: api.ts  commands.ts  errors.ts  formats.ts  i18n.tsx  jobs.ts  keys.ts  settings.tsx  shortcuts.tsx  studio.tsx  theme.tsx  tips.ts  useJobs.ts  version.ts
frontend/src/shims/tauri/: _bridge.ts  core.ts  dialog.ts  event.ts  opener.ts  webview.ts  window.ts
ngc7023/: __init__.py  api.py  bin.py  main.py
ngc7023/core/: __init__.py  capability.py  cover.py  ffmpeg.py  proc.py  system_info.py  ytdlp.py
ngc7023/jobs/: __init__.py  engine.py  pdf_ops.py  progress.py  updater.py
packaging/: BUILD.md  build-linux.sh  build-windows.ps1  entry.py  ngc7023.iss  patch-webkit-libexec.py
packaging/linux/: AppRun  ngc7023.desktop
packaging/pyinstaller-hooks/: rthook-webkit.py
tests/: test_capability.py  test_cover.py  test_engine_integration.py  test_ffmpeg.py  test_pdf.py  test_progress.py  test_subtitle.py  test_ytdlp.py
